plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.0-SNAPSHOT" apply false
    id 'io.github.juuxel.loom-quiltflower' version '1.7.2' apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: "io.github.juuxel.loom-quiltflower"

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.mappings}")
        }
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    version = "${rootProject.minecraft_version}-${rootProject.mod_version}" as Object
    group = rootProject.maven_group

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 17
    }

    repositories {
        maven {
            // saps.dev Maven (KubeJS and Rhino)
            url = 'https://maven.saps.dev/minecraft'
            content {
                includeGroup 'dev.latvian.mods'
            }
        }

        maven {
            url 'https://repo.repsy.io/mvn/lucraft/threetag'
        }

        maven {
            url = 'https://maven.parchmentmc.net/'
            content {
                includeGroup 'org.parchmentmc.data'
            }
        }

        maven {
            url = 'https://www.cursemaven.com'
            content {
                includeGroup 'curse.maven'
            }
        }

        maven {
            url = 'https://maven.terraformersmc.com/releases/'
        }

        maven {
            url = 'https://maven.shedaniel.me'
        }

        maven {
            url = 'https://dvs1.progwml6.com/files/maven/'
        }

        maven {
            name = 'Ladysnake Mods'
            url = 'https://ladysnake.jfrog.io/artifactory/mods'
        }

        maven {
            url = 'https://maven.theillusivec4.top/'
        }

        maven {
            name = 'TerraformersMC'
            url = 'https://maven.terraformersmc.com/'
        }

        maven {
            name = 'Ladysnake Libs'
            url = 'https://ladysnake.jfrog.io/artifactory/mods'
        }

        maven {
            url = 'https://maven.blamejared.com'
        }

        maven {
            url = 'https://jitpack.io'
        }

        maven {
            name = "Fuzs Mod Resources"
            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
        }

        // Player Animator
        maven {
            name = "KosmX's maven"
            url = 'https://maven.kosmx.dev/'
        }

        maven {
            name = 'Gecko Lib'
            url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        }
    }

    java {
        withSourcesJar()
    }
}